@@ -1,34 +1,50 @@
 package org.nmrfx.analyst.gui.molecule;
 
+import javafx.beans.property.SimpleIntegerProperty;
 import javafx.event.ActionEvent;
 import javafx.fxml.FXML;
-import javafx.scene.control.Menu;
-import javafx.scene.control.MenuItem;
+import javafx.scene.control.*;
+import javafx.scene.layout.GridPane;
 import javafx.stage.FileChooser;
 import org.controlsfx.dialog.ExceptionDialog;
 import org.nmrfx.analyst.gui.AnalystApp;
 import org.nmrfx.analyst.gui.MenuActions;
 import org.nmrfx.analyst.gui.molecule3D.MolSceneController;
+import org.nmrfx.analyst.gui.molecule3D.RNASSViewController;
 import org.nmrfx.analyst.gui.peaks.NOETableController;
+import org.nmrfx.analyst.gui.tools.ResidueLayoutTool;
+import org.nmrfx.chemistry.AtomContainer;
 import org.nmrfx.chemistry.MoleculeFactory;
+import org.nmrfx.chemistry.Polymer;
 import org.nmrfx.chemistry.constraints.MolecularConstraints;
 import org.nmrfx.chemistry.constraints.NoeSet;
 import org.nmrfx.chemistry.io.*;
+import org.nmrfx.peaks.ResonanceFactory;
+import org.nmrfx.project.ProjectBase;
 import org.nmrfx.structure.chemistry.Molecule;
 import org.nmrfx.structure.chemistry.OpenChemLibConverter;
 import org.nmrfx.utils.GUIUtils;
 
 import java.io.File;
+import java.io.IOException;
+import java.nio.file.DirectoryStream;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
+import java.util.Optional;
 
 public class MoleculeMenuActions extends MenuActions {
     private MolSceneController molController;
+    private RNASSViewController rnassViewController;
     private SeqDisplayController seqDisplayController = null;
     private AtomController atomController;
     private RDCGUI rdcGUI = null;
     private RNAPeakGeneratorSceneController rnaPeakGenController;
     private NOETableController noeTableController;
+    private ResidueLayoutTool residueLayoutTool = null;
+
 
     public MoleculeMenuActions(AnalystApp app, Menu menu) {
         super(app, menu);
@@ -50,6 +66,9 @@ public class MoleculeMenuActions extends MenuActions {
         MenuItem readPDBxyzItem = new MenuItem("Read PDB XYZ...");
         readPDBxyzItem.setOnAction(e -> readMolecule("pdbx"));
         molFileMenu.getItems().add(readPDBxyzItem);
+        MenuItem readPDBLigandItem = new MenuItem("Read PDB Ligand...");
+        readPDBLigandItem.setOnAction(e -> readMolecule("pdbLigand"));
+        molFileMenu.getItems().add(readPDBLigandItem);
         MenuItem readMMCIFItem = new MenuItem("Read mmCIF...");
         readMMCIFItem.setOnAction(e -> readMolecule("mmcif"));
         molFileMenu.getItems().add(readMMCIFItem);
@@ -69,7 +88,17 @@ public class MoleculeMenuActions extends MenuActions {
         MenuItem smileItem = new MenuItem("Input SMILE...");
         smileItem.setOnAction(e -> getSMILEMolecule());
 
-        menu.getItems().addAll(molFileMenu, smileItem, clearAllItem);
+        Menu saveMenuItem = new Menu("Save");
+
+        MenuItem writePDBItem = new MenuItem("Write PDB");
+        writePDBItem.setOnAction(e -> writePDB());
+
+        MenuItem writeMolItem = new MenuItem("Write Molfile");
+        writeMolItem.setOnAction(e -> writeMol());
+
+        saveMenuItem.getItems().addAll(writePDBItem, writeMolItem);
+
+        menu.getItems().addAll(molFileMenu, smileItem, clearAllItem, saveMenuItem);
 
     }
 
@@ -78,14 +107,22 @@ public class MoleculeMenuActions extends MenuActions {
         MenuItem seqGUIMenuItem = new MenuItem("Sequence Editor...");
         seqGUIMenuItem.setOnAction(e -> SequenceGUI.showGUI(app));
 
+        MenuItem renumberItem = new MenuItem("Renumber residues...");
+        renumberItem.setOnAction(e -> renumberSequence());
+
         MenuItem atomsMenuItem = new MenuItem("Atom Table...");
         atomsMenuItem.setOnAction(this::showAtoms);
         MenuItem sequenceMenuItem = new MenuItem("Sequence Viewer...");
         sequenceMenuItem.setOnAction(this::showSequence);
 
-        MenuItem molMenuItem = new MenuItem("Viewer...");
+        MenuItem molMenuItem = new MenuItem("Molecule Viewer...");
         molMenuItem.setOnAction(e -> showMols());
 
+        MenuItem rnaMenuItem = new MenuItem("Nucleic Acid Viewer...");
+        rnaMenuItem.setOnAction(e -> showRNA());
+
+        MenuItem residuesItem = new MenuItem("Residue Topology...");
+        residuesItem.setOnAction(e -> showResidueLayoutTool());
 
         Menu molConstraintsMenu = new Menu("Constraints");
 
@@ -101,7 +138,7 @@ public class MoleculeMenuActions extends MenuActions {
         rnaPeakGenMenuItem.setOnAction(this::showRNAPeakGenerator);
 
         menu.getItems().addAll(seqGUIMenuItem, atomsMenuItem,
-                sequenceMenuItem, molMenuItem, molConstraintsMenu, rnaPeakGenMenuItem);
+                sequenceMenuItem, molMenuItem, rnaMenuItem, residuesItem, renumberItem, molConstraintsMenu, rnaPeakGenMenuItem);
     }
 
     void clearExisting() {
@@ -112,7 +149,9 @@ public class MoleculeMenuActions extends MenuActions {
             }
             if (molController != null) {
                 molController.removeAll();
-                molController.clearSS();
+            }
+            if (rnassViewController != null) {
+                rnassViewController.clearSS();
             }
         }
     }
@@ -124,6 +163,18 @@ public class MoleculeMenuActions extends MenuActions {
         }
         molController.getStage().show();
         molController.getStage().toFront();
+    }
+
+    @FXML
+    public void showRNA() {
+        if (rnassViewController == null) {
+            if (molController == null) {
+                molController = MolSceneController.create();
+            }
+            rnassViewController = RNASSViewController.create(molController);
+        }
+        rnassViewController.getStage().show();
+        rnassViewController.getStage().toFront();
     }
 
 
@@ -150,6 +201,15 @@ public class MoleculeMenuActions extends MenuActions {
         rdcGUI.showRDCplot();
     }
 
+    private void showResidueLayoutTool() {
+        if (residueLayoutTool == null) {
+            residueLayoutTool = new ResidueLayoutTool();
+        }
+        residueLayoutTool.showResidues();
+    }
+
+
+
     public void updateRDC(File starFile) {
         if (rdcGUI != null) {
             rdcGUI.bmrbFile.setText(starFile.getName());
@@ -157,7 +217,7 @@ public class MoleculeMenuActions extends MenuActions {
             MolecularConstraints molConstr = MoleculeFactory.getActive().getMolecularConstraints();
             if (!molConstr.getRDCSetNames().isEmpty()) {
                 rdcGUI.setChoice.getItems().addAll(molConstr.getRDCSetNames());
-                rdcGUI.setChoice.setValue(rdcGUI.setChoice.getItems().get(0));
+                rdcGUI.setChoice.setValue(rdcGUI.setChoice.getItems().getFirst());
             }
         }
 
@@ -169,6 +229,86 @@ public class MoleculeMenuActions extends MenuActions {
         }
     }
 
+    public static String getType(Path usePath) {
+        File file = usePath.toFile();
+        String type = null;
+        String fileName = file.getName();
+        int dotPos = fileName.lastIndexOf(".");
+        if (dotPos != -1) {
+            type = fileName.substring(dotPos + 1);
+        }
+        return type;
+
+    }
+
+    public static void readMoleculeInDirectory(Path dir) throws IOException {
+        List<Path> moleculePaths = new ArrayList<>();
+        try (DirectoryStream<Path> paths = Files.newDirectoryStream(dir, "*.{smiles,mol,pdb,mol2,sdf}")) {
+            for (Path entry : paths) {
+                moleculePaths.add(entry);
+            }
+        }
+        for (Path usePath : moleculePaths) {
+            if (usePath != null) {
+                String type = getType(usePath);
+                if (type == null) {
+                    return;
+                }
+                readMolecule(usePath.toFile(), type);
+            }
+        }
+    }
+
+    public void writePDB() {
+        FileChooser fileChooser = new FileChooser();
+        File file = fileChooser.showSaveDialog(null);
+        if (file != null) {
+            Molecule molecule = Molecule.getActive();
+            if (molecule != null) {
+                try {
+                    molecule.writeXYZToPDB(file.toString(), -1);
+                } catch (IOException e) {
+                    ExceptionDialog exceptionDialog = new ExceptionDialog(e);
+                    exceptionDialog.showAndWait();
+                }
+            }
+        }
+
+    }
+
+    public void writeMol() {
+        FileChooser fileChooser = new FileChooser();
+        File file = fileChooser.showSaveDialog(null);
+        if (file != null) {
+            Molecule molecule = Molecule.getActive();
+            if (molecule != null) {
+                try {
+                    AtomContainer atomContainer = null;
+                    if (!molecule.entities.isEmpty()) {
+                        if (!molecule.getLigands().isEmpty()) {
+                            atomContainer = molecule.getLigands().getFirst();
+                        } else if (!molecule.getPolymers().isEmpty()) {
+                            atomContainer = molecule.getPolymers().getFirst();
+                        }
+                    }
+                    if (atomContainer == null) {
+                        GUIUtils.warn("Molfile writer", "No ligand, compound or polymer");
+                        return;
+                    }
+                    OpenChemLibConverter.writeToMolfile(atomContainer, file);
+                } catch (IOException e) {
+                    ExceptionDialog exceptionDialog = new ExceptionDialog(e);
+                    exceptionDialog.showAndWait();
+                }
+            }
+        }
+
+    }
+
+    public void readMolecule() {
+        readMolecule("");
+    }
+
     public void readMolecule(String type) {
         if (!type.equals("pdb xyz") && !checkForExisting()) {
             return;
@@ -176,6 +316,36 @@ public class MoleculeMenuActions extends MenuActions {
 
         FileChooser fileChooser = new FileChooser();
         File file = fileChooser.showOpenDialog(null);
+        if (file != null) {
+            if (type.isEmpty()) {
+                type = getType(file.toPath());
+            }
+            if (type != null) {
+                Molecule molecule = readMolecule(file, type);
+                if (molecule != null) {
+                    if (type.equals("seq")) {
+                        boolean nucleicAcid = !molecule.getPolymers().isEmpty();
+                        for (Polymer polymer : molecule.getPolymers()) {
+                            if (!(polymer.isRNA() || polymer.isDNA())) {
+                                nucleicAcid = false;
+                                break;
+                            }
+                        }
+                        if (nucleicAcid) {
+                            showRNA();
+                        } else {
+                            showSequence(null);
+                        }
+                    } else {
+                        showMols();
+                    }
+                    resetAtomController();
+                }
+            }
+        }
+    }
+
+    public static Molecule readMolecule(File file, String type) {
         Molecule molecule = null;
         if (file != null) {
             try {
@@ -186,7 +356,8 @@ public class MoleculeMenuActions extends MenuActions {
                     }
                     case "pdbx" -> {
                         PDBFile pdbReader = new PDBFile();
-                        molecule = (Molecule) pdbReader.read(file.toString(), false);
+                        molecule = Molecule.getActive();
+                        molecule = (Molecule) pdbReader.read(molecule, file.toString(), false);
                     }
                     case "pdb xyz" -> {
                         PDBFile pdb = new PDBFile();
@@ -194,7 +365,20 @@ public class MoleculeMenuActions extends MenuActions {
                         pdb.readCoordinates(molecule, file.getPath(), -1, false, true);
                         molecule.updateAtomArray();
                     }
-                    case "sdf", "mol" -> molecule = (Molecule) SDFile.read(file.toString(), null);
+                    case "pdbLigand" -> {
+                        molecule = Molecule.getActive();
+                        PDBFile.readResidue(file.toString(), null, molecule, null);
+                        molecule.updateAtomArray();
+                    }
+                    case "sdf", "mol" -> {
+                        molecule = (Molecule) MoleculeFactory.getActive();
+                        if (molecule == null) {
+                            molecule = (Molecule) SDFile.read(file.toString(), null);
+                        } else {
+                            SDFile.read(file.toString(), null, molecule, null, null);
+                        }
+
+                    }
                     case "mol2" -> molecule = (Molecule) Mol2File.read(file.toString(), null);
                     case "seq" -> {
                         Sequence seq = new Sequence();
@@ -204,14 +388,14 @@ public class MoleculeMenuActions extends MenuActions {
                     case "smiles" -> {
                         List<Molecule> molecules = OpenChemLibConverter.readSMILES(file);
                         if (!molecules.isEmpty()) {
-                            molecule = molecules.get(0);
+                            molecule = molecules.getFirst();
+                            ProjectBase.getActive().putMolecule(molecule);
                         }
                     }
-                    default -> {
-                    }
+                    default -> GUIUtils.warn("Molecule Open", "Invalid molecule type " + type);
+
                 }
                 MoleculeFactory.setActive(molecule);
-                showMols();
             } catch (Exception ex) {
                 var mol = MoleculeFactory.getActive();
                 if ((mol != null) && (mol != molecule)) {
@@ -222,8 +406,8 @@ public class MoleculeMenuActions extends MenuActions {
                 dialog.setTitle("Error reading molecule file");
                 dialog.showAndWait();
             }
-            resetAtomController();
         }
+        return molecule;
     }
 
     @FXML
@@ -256,6 +440,7 @@ public class MoleculeMenuActions extends MenuActions {
                 try {
                     Molecule molecule = OpenChemLibConverter.parseSmiles("mol", smileString);
                     molecule.setActive();
+                    ProjectBase.getActive().putMolecule(molecule);
                 } catch (IllegalArgumentException iaE) {
                     GUIUtils.warn("SMILES Parser", iaE.getMessage());
                     return;
@@ -278,5 +463,90 @@ public class MoleculeMenuActions extends MenuActions {
         noeTableController.getStage().show();
         noeTableController.getStage().toFront();
         noeTableController.updateNoeSetMenu();
+    }
+
+    private void renumberSequence() {
+        Molecule molecule = Molecule.getActive();
+        if (molecule == null) {
+            GUIUtils.warn("Renumbering ", "No molecule present");
+            return;
+        }
+        var result = renumberingDialog();
+        if (result.isPresent()) {
+            Renumbering renumbering = result.get();
+            List<Polymer> polymers = renumbering.polymer == null ? molecule.getPolymers() : List.of(renumbering.polymer);
+            for (Polymer polymer : polymers) {
+                if (renumbering.updateResidues) {
+                    polymer.addResidueOffset(renumbering.offset);
+                    if (atomController != null) {
+                        atomController.refreshAtomTable();
+                    }
+                }
+                if (renumbering.updatePeaks()) {
+                    ResonanceFactory resonanceFactory = ProjectBase.activeResonanceFactory();
+                    resonanceFactory.renumber(renumbering.offset(), polymer.getName());
+                }
+            }
+        }
+    }
+
+    public record Renumbering(Polymer polymer, int offset, boolean updateResidues, boolean updatePeaks) {
+
+    }
+
+    public static Optional<Renumbering> renumberingDialog() {
+        Molecule molecule = Molecule.getActive();
+        if (molecule == null) {
+            GUIUtils.warn("Renumbering ", "No molecule present");
+            return Optional.empty();
+        }
+
+        Dialog<Renumbering> dialog = new Dialog<>();
+        dialog.setTitle("Renumbering");
+        dialog.setHeaderText("Enter offset information:");
+        dialog.getDialogPane().getButtonTypes().addAll(ButtonType.OK, ButtonType.CANCEL);
+        GridPane grid = new GridPane();
+        grid.setVgap(10);
+        grid.setHgap(10);
+        dialog.getDialogPane().setContent(grid);
+        int comboBoxWidth = 100;
+        ComboBox<Polymer> polymerComboBox = new ComboBox<>();
+        polymerComboBox.getItems().addAll(molecule.getPolymers());
+        polymerComboBox.getItems().add(null);
+        polymerComboBox.setValue(molecule.getPolymers().getFirst());
+        polymerComboBox.setMinWidth(comboBoxWidth);
+        polymerComboBox.setMaxWidth(comboBoxWidth);
+
+        CheckBox residueCheckBox = new CheckBox("");
+        CheckBox peakCheckBox = new CheckBox("");
+
+
+        SimpleIntegerProperty offsetProp = new SimpleIntegerProperty(0);
+        TextField offsetField = GUIUtils.getIntegerTextField(offsetProp);
+
+
+        grid.add(new Label("Polymer"), 0, 0);
+        grid.add(polymerComboBox, 2, 0);
+
+        grid.add(new Label("Update Residues"), 0, 1);
+        grid.add(residueCheckBox, 1, 1);
+
+        grid.add(new Label("Update Peaks"), 0, 2);
+        grid.add(peakCheckBox, 1, 2);
+
+        grid.add(new Label("Offset number"), 0, 3);
+        grid.add(offsetField, 2, 3);
+
+        dialog.setResultConverter(dialogButton -> {
+            if (dialogButton == ButtonType.OK) {
+                // The value set in the formatter may not have been set yet so commit the value before retrieving
+                polymerComboBox.commitValue();
+                offsetField.commitValue();
+                return new Renumbering(polymerComboBox.getValue(), offsetProp.get(), residueCheckBox.isSelected(), peakCheckBox.isSelected());
+            }
+            return null;
+        });
+
+        return dialog.showAndWait();
     }
 }
